<resources>
    <string name="app_name">Portfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">Spotify streamer</string>
    <string name="scores_app">Scores app</string>
    <string name="library_app">Library app</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="xyz_reader">XYZ reader</string>
    <string name="capstone">Capstone : my own app</string>
</resources>
