<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_gravity="center">

        <Button
            android:id="@+id/spotify_streamer_button"
            android:text="@string/spotify_streamer"
            style="@style/GeneralButton"
            />

        <Button
            android:id="@+id/scores_app_button"
            android:text="@string/scores_app"
            style="@style/GeneralButton"/>

        <Button
            android:id="@+id/library_app_button"
            android:text="@string/library_app"
            style="@style/GeneralButton"/>

        <Button
            android:id="@+id/build_it_bigger_button"
            android:text="@string/build_it_bigger"
            style="@style/GeneralButton"/>

        <Button
            android:id="@+id/xyz_reader_button"
            android:text="@string/xyz_reader"
            style="@style/GeneralButton"/>

        <Button
            android:id="@+id/capstone_button"
            android:text="@string/capstone"
            style="@style/GeneralButton"/>

    </LinearLayout>
</ScrollView>


